app/styles/layout/_list.scss
.ee-list {
  color: $color-black-primary;
  width: 100%;
}

.ee-list__item {
  box-sizing: border-box;
  padding: 0 $eagleeye-list-item-left-right-padding;
  transition: background-color $eagleeye-transition-duration $eagleeye-transition-timing-function;

  &:hover {
    background-color: $color-black-dividers;
  }
}

.ee-list__item__content {
  box-sizing: border-box;
  // height: $eagleeye-list-container-height;
  padding: $eagleeye-list-item-content-padding 0;
}

.ee-list__item__content__col-1 {
  width: $eagleeye-list-item-col-1-width;
}

.ee-list__item__content__col-2 {
  margin-left: $eagleeye-list-item-content-padding;
}

.ee-list__item__content__col-2__row-1 {
  width: 100%;
  margin-bottom: $eagleeye-list-item-content-padding;
}

.ee-list__item__content__col-2__row-2 {
  p {
    @include text-ellipsis(1, 14px, 20 / 14);
  }
}

.ee-list__item--narrow {
  .ee-list__item__content__col-1 {
    width: $eagleeye-list-item-col-1-width-narrow;
  }

  .ee-list__item__content__col-2 {
    margin-left: 0;
  }

  .ee-list__item__content__col-2__row-1 {
    width: 100%;
    margin-bottom: $eagleeye-list-item-content-padding;
  }
}

